[tool.poetry]
name = "pandas-categorical"
version = "0.0.1"
description = "An example of pandas categorical types"
authors = ["ArjanCodes <hi@arjancodes.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
